<resources>
    <string name="app_name">The Learning Project</string>
    <string name="usuario">Usuário</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>
    <string name="logout">Sair</string>
    <string name="email">E-mail</string>
    <string name="cadastrar">Criar conta</string>
    <string name="texto">Somos uma plataforma de aprendizagem mútua.\n\n
        Aqui, todos são mestres em alguma coisa. Você vai aprender o que precisa e ensinar o que sabe.\n\n
        Vamos começar definindo as suas habilidades.</string>
    <string name="continuar">Continuar</string>
    <string name="finalizar">Finalizar</string>
    <string name="descricao">Descrição</string>
    <string name="habilidades">Habilidades</string>
    <string name="necessidades">Necessidades</string>
    <string name="dica1">O que você pode ensinar?</string>
    <string name="dica2">O que você precisa aprender nesse momento?</string>
    <string name="dica3">Onde estuda? O que cursa?</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir conta</string>
    <string name="voltar">Voltar</string>
    <string name="config">Configurações</string>
    <string name="bottom_nav_title1">Recomendações</string>
    <string name="bottom_nav_title2">Buscar</string>
    <string name="bottom_nav_title3">Perfil</string>
    <string name="bottom_nav_title4">Interações</string>
    <string name="manterConectado">Manter conectado</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="ok">OK</string>
    <string name="alterarNome">Alterar nome</string>
    <string name="alterarDescricao">Alterar descrição</string>
    <string name="alterarEmail">Alterar e-mail</string>
    <string name="alterarSenha">Alterar senha</string>
    <string name="novaSenha">Nova senha</string>
    <string name="confirmarNovaSenha">Confirmar nova senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="copyright">The Learning © Project 2017</string>
    <string name="conta">Conta</string>
    <string name="outrasOpcoes">Outras opções</string>
    <string name="cadastrarHabilidade">Insira uma habilidade</string>
    <string name="cadastrarNecessidade">Insira uma necessidade</string>
    <string name="cadastrarNovaHabilidade">Insira uma nova habilidade</string>
    <string name="cadastrarNovaNecessidade">Insira uma nova necessidade</string>
    <string name="botaoExcluir">Botão excluir</string>
    <string name="informativo">Digite o número de telefone vinculado\n a sua conta</string>
    <string name="esqueceuSenhaTitulo">Esqueceu sua senha?</string>
    <string name="telefone">Telefone</string>
    <string name="alterarTelefone">Alterar telefone</string>
    <string name="dica">Pode levar alguns minutos até o\nrecebimento da mensagem</string>
    <string name="sms">Seu código de recuperação de conta é:</string>
    <string name="codigoRecebido">Digite o código recebido</string>
    <string name="enviarCodigo">Enviar novo código</string>
    <string name="mensagemEnviada">Mensagem enviada com sucesso!</string>
    <string name="iniciarChat">Iniciar Chat</string>
    <string name="notificacoes">Notificações</string>
    <string name="nenhumaRecomendacao">Que pena! Nenhum perfil recomendado :(</string>
    <string name="nenhumaInteracao">Você não interagiu com nenhum usuário ainda.\nO que está esperando? Ache seu novo parceiro de estudo!</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="semResultados">Sem resultados</string>
    <string name="contato">Contato</string>
    <string name="salvar">Salvar</string>
    <string name="usuariosQueremAprender">Estes usuários querem aprender</string>
    <string name="usuariosQueremEnsinar">Estes usuários querem ensinar</string>

</resources>
