<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:contexto="com.thelearningproject.pessoa.gui.RecuperarContaActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/esqueceuSenhaTitulo"
            android:textAlignment="center"
            android:textColor="@color/textWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/informativo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/informativo"
            android:textAlignment="center"
            android:textColor="@color/textWhite"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/telefoneID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:textSize="20sp" />

            <Button
                android:id="@+id/botaoConfirmaID"
                style="@style/btn_white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/continuar" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
