<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.thelearningproject.applogin.usuario.gui.LoginActivity">

    <Button
        android:id="@+id/btLogin"
        style="@style/btn_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/tSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />


    <Button
        android:id="@+id/cadastroID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textWhite"
        android:background="@drawable/button_stroke"/>

    <TextView
        style="@style/camposTexto"
        android:id="@+id/textView4"
        android:text="@string/email"
        android:layout_below="@+id/imageView2"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <EditText
        android:id="@+id/tLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:ems="12"
        android:textColor="@color/textWhite"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/camposTexto"
        android:id="@+id/textView5"
        android:layout_marginTop="15dp"
        android:text="@string/senha"
        android:layout_below="@+id/tLogin" />

    <EditText
        android:id="@+id/tSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tLogin"
        android:layout_alignStart="@+id/tLogin"
        android:layout_below="@+id/textView5"
        android:ems="12"
        android:textColor="@color/textWhite"
        android:inputType="textPassword" />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:layout_marginTop="24dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>