<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.thelearningproject.applogin.perfil.gui.PerfilActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/gradient">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/nome"
            android:src="@drawable/circle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/descricaoUsuarioID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/textWhite"
            android:textStyle="italic"
            android:fontFamily="serif"
            android:text="@string/descricao"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/habilidades" />

            <View style="@style/DividerBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listaPerfilHabilidades"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/necessidades" />

            <View style="@style/DividerBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listaPerfilNecessidades"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outrasOpcoes" />

            <View style="@style/DividerBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listaPerfilOpcoes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent"
                    android:clickable="false"
                    android:alpha=".7"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
