<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:contexto=".infraestrutura.gui.ConfiguracaoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_nav_title3" />

            <View style="@style/DividerBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listaConfigPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conta" />

            <View style="@style/DividerBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listaConfigConta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outrasOpcoes" />

            <View style="@style/DividerBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listaConfigOpcoes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
<!--
    <TextView
        android:id="@+id/op1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alterar dados"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/alterarNomeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterarNome"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/op1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/deletarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColor="@color/textWhite"
        android:layout_marginBottom="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp" />

    <Button
        android:id="@+id/LogoutID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@android:color/secondary_text_light"
        android:textColor="@color/textWhite"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_alignBaseline="@+id/deletarID"
        android:layout_alignBottom="@+id/deletarID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/op2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Outras opções"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/deletarID"
        android:layout_alignRight="@+id/deletarID"
        android:layout_alignEnd="@+id/deletarID" />

    <Button
        android:id="@+id/alterarEmailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterarEmail"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/alterarNomeID"
        android:layout_alignLeft="@+id/alterarNomeID"
        android:layout_alignStart="@+id/alterarNomeID" />

    <Button
        android:id="@+id/alterarSenhaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterarSenha"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/alterarEmailID"
        android:layout_alignLeft="@+id/alterarEmailID"
        android:layout_alignStart="@+id/alterarEmailID" />
-->
</RelativeLayout>